5.2.1
-----
1. Fix permissions of Hungarian translations file.
2. Rename Hungarian translation files from "hu-hu" to "hu"
3. Remove quotes and colon from random mix names.

5.2.0
-----
 1. Add support for LMS 9.0 user defined roles.
 2. Allow to save 'Random Mix' configs for later use, and list these when open
    'Random Mix'.
 3. Remove 'Stop' button from 'Random Mix' dialog, as can be stopped elsewhere.
 4. Allow 'Random mixes' to be pinned to home screen.
 5. Add option to use full page for now-playing backdrop, i.e. extend into top
    toolbar and (on mobile) bottom navigation bar.
 6. Add slight shadow to now-playing image.
 7. On desktop layout auto-switch to now-playing when use 'Play now' action, as
    per mobile layout.
 8. If bottom padding is added then adjust desktop now-playing bar for this.
 9. Add option to replace mobile navigation bar with now-playing bar.
10. Fix swiping on lists with only 1 item.
11. Add Hungarian translation - thanks to Ambrits Tamás.
12. Add release-type icons to album headers in MAI view.
13. Fix colour of queue button in now-playing bar when using light themes with
    coloured toolbars.
14. Fix alignment of album times when using album style queue.
15. Collapse now-playing if queue emptied.

5.1.1
-----
1. Fix 'Remote libraries' cloud icon appearing with no text on home screen.
2. Use padding for desktop thin now-playing bar under iOS.
3. Revert moving 'Random Mix' to queue menu, and place back under 'My Music'.
4. Don't show 'Random Mix' in 'My Music' for party mode.
5. Mix type is 'works', not 'work', for 'Random Mix' by 'Works'.

5.1.0
-----
 1. Replace shuffle icon with dice icon if random play is active, when using
    LMS >= 9.0
 2. Move 'Random Mix' to queue menu.
 3. Add 'Copy details' action to menu of certain items.
 4. Prompt if change settings page and a value has been modified.
 5. Update skin language when LMS language is changed.
 6. Move 'Remote Libraries' into 'Apps'.