@@ -184,3 +184,27 @@ const MBAR_REP_NAV = 3;
 
 const MIN_PQ_PIN_WIDTH = 670;
 const MIN_PQ_RESIZE_WIDTH = 450;
+
+const STD_ITEM_GENRE = 0;
+const STD_ITEM_ARTIST = 1;
+const STD_ITEM_ALBUM = 2;
+const STD_ITEM_PLAYLIST = 3;
+const STD_ITEM_REMOTE_PLAYLIST = 4;
+const STD_ITEM_YEAR = 5;
+const STD_ITEM_TRACK = 6;
+const STD_ITEM_ALBUM_TRACK = 7;
+const STD_ITEM_PLAYLIST_TRACK = 8;
+const STD_ITEM_REMOTE_PLAYLIST_TRACK = 9;
+const STD_ITEM_MUSICIP_MOOD = 10;
+const STD_ITEM_WORK = 11;
+const STD_ITEM_WORK_COMPOSER = 12;
+const STD_ITEM_WORK_GENRE = 13;
+const STD_ITEM_RANDOM_MIX = 14;
+const STD_ITEM_MIX = 101;
+const STD_ITEM_MAI = 200;
+const STD_ITEM_ALL_TRACKS = 201;
+const STD_ITEM_COMPOSITION_TRACKS = 202;
+const STD_ITEM_CLASSICAL_WORKS = 203;
+const STD_ITEM_ONLINE_ARTIST = 300;
+const STD_ITEM_ONLINE_ALBUM = 301;
+const STD_ITEM_ONLINE_ARTIST_CATEGORY = 302;
