@@ -3,6 +3,7 @@
 1. Fix permissions of Hungarian translations file.
 2. Rename Hungarian translation files from "hu-hu" to "hu"
 3. Remove quotes and colon from random mix names.
+4. Fix empty home screen if random mix pinned and showing a list.
 
 5.2.0
 -----
